# raytracer

./: Cargo.toml  LICENSE-MIT  README.md  config.toml
src/: camera.rs  config.rs  lib.rs  main.rs  primitive.rs  tracer.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/object/: aabb.rs  mod.rs  sphere.rs
src/scenes/: mod.rs  rtiow.rs
