[package]
name = "raytracing"
version = "0.1.0"
authors = ["kosayoda <git@siek.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Argument parser
clap = { version = "4.1.6", features = ["derive"] }
# Binary error handling
color-eyre = "0.6.2"
# For displaying raytracing output
eframe = "0.21.3"
egui = "0.21.0"
# For resizing raytracer image for egui
image = "0.24.5"
fast_image_resize = "2.6.0"
glam = { version = "0.23.0", features = ["serde"] }
# Colored strings
owo-colors = "3.5.0"
serde = "1.0.154"
# Library error types
thiserror = "1.0.38"
# Logging utilities
time = { version = "0.3.17", features = ["formatting"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
# Unicode grapheme cluster support for strings
unicode-segmentation = "1.10.1"
# For easier newtype wrappers
derive_more = "0.99.17"
# For improving dynamic dispatch performance
enum_dispatch = "0.3.11"
# For random sampling
rand = { version = "0.8.5", features = ["small_rng"] }

# Build `backtrace` with optimizations for `color-eyre` performance
[profile.dev.package.backtrace]
opt-level = 3

# Comment/uncomment as necessary for cargo-flamegraph
# [profile.release]
# debug = true
